style.css
@import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Gupter:wght@400;500;700&display=swap');

* {
  box-sizing: border-box; }


html, body{
    margin: 0;
    padding: 0;
    font-family: "Gupter", serif;
    font-weight: 300;
    font-style: normal;
    height: 100vh;
    width: 100%;
    display: block;
    position: relative;
}

body, html, .header, header, nav, footer { 
    width: 100%;
    padding: 0;
    margin: 0;
}

main{width:100%;}
.header {
    background-color: white;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid #ddd;
    width: 100%;
    height: fit-content;
}

.header .logo {
    display: flex;
    align-items: center;
   
}

.header .logo img {
    height: fit-content;
    margin-right: 10px;
    width:fit-content;
    
}

.header .contact-info {
    text-align: left;
    margin-right: 0;
    padding:20px;
}

.header .contact-info span {
    margin: 5px 0;
    font-size: 14px;
    font-weight: 800;
}

.header .contact-info p {
    margin: 5px 0;
    font-size: 13px;
}

.header .contact-info a {
    margin: 5px 0;
    font-size: 13px;
    text-decoration: none;
    color: rgb(13, 37, 177);
}

.contact-flex {
    display: flex;
}

.contact-block {
    display: block;
    padding: 10px;
    text-align: left;
} 

nav {
    border-top: 1px solid #1f58ad;
    width: 100%;
}

nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    width: 100%;
}

nav ul li {
    margin: 0 20px;
}

nav ul li a {
    text-decoration: none;
    color: #333;
    font-weight: lighter;
    padding: 10px 0;
    display: block;
    font-size: 20px;
}

nav ul li a:hover {
    color: #007BFF;
}



       /* Your existing CSS goes here */
       footer { 
        font-weight: 100;
        color: white;
        width: 100%;
        height: fit-content;
        bottom: 0;
        padding: 0;
        display: block;
        position: relative;
        margin: 0;
        border-top:#586880 1px solid;

       }

    footer p {
        font-weight: 100;
        letter-spacing: 0.2cap;
    }

    footer a {
        color: white;
        text-decoration: none;
    }

    .footer-container {
        padding: 10px;
        background-color: rgb(17, 21, 46);
        text-align: center;
        height:fit-content;
    }

    .socialmedia-container {
        background-color: white;
        padding: 10px;
        text-align: center;
        width:100%;
        height: fit-content;
        padding: 40px 0 40px 0;

    }

    .socialmedia-container a {
        margin: 0 10px;
        color:#5ab4c0;
        font-size: 24px;
        transition: color 0.3s;
    }

    .socialmedia-container p {
      margin: 0 10px;
      color:#2b808b;
      font-size: 24px;
      transition: color 0.3s;
      padding: 10px 0 10px 0;
  }

    .socialmedia-container a:hover {
        color: #007BFF; /* Change to your desired hover color */
    }

.schedule-symbol {
    padding-top: 0;
}

.hero-container {
  width:100%;
  display: block;
  text-align:center;
  justify-content: center;
  /* -ms-flex-wrap: wrap; */
  
}


.background-hero {

  background-image: url("img/familyhappy.jpg");
  background-repeat:no-repeat;
  background-position: center;
  background-size: cover;
  width:100%;
  display: flex;
  position: relative;
  justify-content: right; /* Center horizontally */
  align-items: center;     /* Center vertically */
  height: 100vh;  
  flex: 50%;         
}

.welcome-container {
  display: block;
 
  position:relative;
  width:100%;
  justify-content:center;
  text-align:center;
  align-items:center;
  

}
.welcome-container p {
  font-size:20px;
  color:#2b5e94;
  font-weight:100;
  justify-content:center;
  text-align:center;
  align-items:center;
  width: 100%;

}

.welcome-container h1 {
  color:#8fdbe6;
  font-weight:100;
  padding:10px;
  border-radius: 10px;
  text-align:center;
  align-items:center;
  width: 100%;
  font-size: calc(20px * 1.5);
  


}

.herotext-container {
  justify-content:right;
  text-align:right;
  align-items:right;
  padding:1rem 5rem 1rem 5rem;
  position:right;
  width: 70%;
  background-color:#2b5e943b;
  border-radius: 0 0 0 0;



}
.herotext-container p {
  font-size: calc(16px + 1.4vw); /* Responsive font size */
  text-align: left;
  color: white;
  padding-left: 30%;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Schatteneffekt */
}



.body-infos-container {

  display: flex;
  padding:90px 0;
  justify-content:center;
  text-align:center;
  align-items:center;
 
  
}

.text-infos {
  
  letter-spacing:1px;
  font-weight:100;
  justify-content:center;
  text-align:center;
  align-items:center;
  padding:20px;  
  color: rgb(5, 23, 37);
  text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.7); /* Schatteneffekt */

}

.text-infos p {
  color:#071531;
  font-size: calc(14px + 1.0vw); /* Responsive font size */
  filter: grayscale(50%); 
  transition: filter 0.3s ease-in-out;
 }

.text-infos h1 {
 color:#5cc6d4;
 font-size: calc(22px + 1.4vw); /* Responsive font size */
 filter: grayscale(50%); 
 transition: filter 0.3s ease-in-out;
}

.text-infos h1:hover { 
   animation: toColor 0.3s;
   filter: none;
  }

.flex-container {
  display: flex;
  flex-wrap: wrap;
  font-size: 30px;
  text-align: center;
}

.flex-item-left {
  
  flex: 50%;
}

.flex-item-right {
  
  flex: 50%;
}
  

/* SLIDES */

/* Testimonial Section */
.testimonial-section {
  text-align: center;
  padding: 20px;
  background-color:#B6E5EB;
  color: #333;
  
}

.testimonial-section img {
  width: 30%;
  min-width: 5em;
  max-width: 6em;
  
}

.testimonial-section h2 {
  font-size: 2.5rem;
  color: black;
  margin-bottom: 40px;
}

.testimonial-slider {
  width: 100%;
  max-width: 800px;
  margin: 0 auto;
  position: relative;
  overflow: hidden;
}

input[type="radio"] {
  display: none;
}

.slides {
  display: flex;
  transition: transform 0.6s ease;
  width: 100%;
}

.slide {
  min-width: 100%;
  padding:20px;
  text-align: center;
  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
  background-color: white;
  border-radius: 10px;
  transition: transform 0.3s ease-in-out;
}

.slide:hover {
  transform: scale(1.02);
}

.slide p {
  font-size: 1.4rem;
  line-height: 1.6em;
  color: #555;
  font-family: "Gupter", serif;
}

.slide h3 {
  margin-top: 20px;
  font-size: 1.2rem;
  color: #2b5e94;
  font-family: "Gupter", serif;
}

#slide1:checked ~ .slides {
  transform: translateX(0%);
}

#slide2:checked ~ .slides {
  transform: translateX(-100%);
}

#slide3:checked ~ .slides {
  transform: translateX(-200%);
}

#slide4:checked ~ .slides {
  transform: translateX(-300%);
}

.controls {
  display: flex;
  justify-content: center;
  margin-top: 20px;
}

.controls label {
  width: 15px;
  height: 15px;
  background-color: #5ab4c0;
  border-radius: 50%;
  display: inline-block;
  margin: 0 8px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

input[type="radio"]:checked + label {
  background-color: #007BFF;
}

/* Responsive adjustments */
@media screen and (max-width: 768px) {
  .slide p {
      font-size: 1.2rem;
  }
  .slide h3 {
      font-size: 1rem;
  }
}
/* sLIDES ENDE */


@media screen and (max-width: 960px) {
    .header {
        display: block;
        width: 100%;
    }

    .contact-block, .contact-flex {
        text-align: right;
        margin: 0;
    } 

    .contact-flex {
        text-align: right;
        margin: 0;
        display:flex;
        justify-content:right;
        
    }

    .header .contact-info span {
      margin:0;
      font-size: 12px;
      font-weight: 800;
  }
  
  .header .contact-info p {
      margin:0;
      font-size: 12px;
  }
  
  .header .contact-info a {
      margin:0;
      font-size: 12px;
      text-decoration: none;
      color: rgb(13, 37, 177);
  }

  .header .contact-icon {
    width:auto;
    min-width:20px;
    max-width:30px;
    margin:0;
    padding:0;

  }

  .hero-container, .welcome-container, .background-hero {
    display: block;
    text-align: center;
    justify-content: center;
  }

.background-hero {
  
  background-image: url("img/familyhappy.jpg");
  background-repeat:no-repeat;
  background-position: center;
  background-size: cover;
  width:100%;
  display: flex;
  position: relative;
  justify-content: right; /* Center horizontally */
  align-items: center;     /* Center vertically */
  height: 100vh;  
  flex: 50%; 
      
}

.herotext-container {
  justify-content:right;
  text-align:right;
  font-size-adjust: inherit;
  position:right;
  width: 100%;
  align-items:right;
  background-color:#2b5e943b;
  border-radius: 0 0 0 0;



}

  .flex-item-right, .flex-item-left {
    flex: 100%;
  }

  .header .logo img {
    height: fit-content;
    margin-right: 10px;
    width:auto; max-width: 40%;
    min-width: 250px;
}

.hidden { display: none;}
}



html, body, .header, header, nav, footer, .footer {
  width: 100%;
  margin:0;
  padding:0;
  
}
.references-container {
  justify-content:center;
  display: block;
  text-align:center;
  position:relative;
  width:100%;
  

}

.references h1 {
  color:#333;
  justify-content: center;
  text-align: center;
  padding:20px;
}

@keyframes toColor {
  0%    { -webkit-filter: grayscale(100%); filter: grayscale(100%); }
  25%   { -webkit-filter: grayscale(75%); filter: grayscale(75%); }
  50%   { -webkit-filter: grayscale(50%); filter: grayscale(50%); }
  75%   { -webkit-filter: grayscale(25%); filter: grayscale(25%); }
  100%  { -webkit-filter: grayscale(0%); filter: grayscale(0%); }
}

img.desaturate, .infos-image {
filter: grayscale(100%); 
transition: filter 0.3s ease-in-out;
width: 50%;
min-width: 15em;
max-width: 60em;
}

img.desaturate:hover, .infos-image:hover { 
 animation: toColor 0.3s;
 filter: none;
}

/* GOOGLE FONTS */


.gupter-regular {
  font-family: "Gupter", serif;
  font-weight: 400;
  font-style: normal;
}

.gupter-medium {
  font-family: "Gupter", serif;
  font-weight: 500;
  font-style: normal;
}

.gupter-bold {
  font-family: "Gupter", serif;
  font-weight: 700;
  font-style: normal;
}



ul.menu {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
  background-color: #B6E5EB

}

ul.menu li {
  margin: 0 20px;
}

ul.menu li a {
  text-decoration: none;
  color: #333;
  font-weight: lighter;
  padding: 10px 0;
  display: block;
  font-size: 20px;
  transition: transform 0.3s ease-in-out;
}

ul.menu li a:hover {
  color: black;
  transform: scale(1.12);
  
}



/* Burger Menu */
.menu-icon {
  display: none;
  font-size: 30px;
  cursor: pointer;
  padding: 10px;
}

#menu-toggle {
  display: none;
}

@media screen and (max-width: 960px) {
  ul.menu {
      display: none;
      flex-direction: column;
      align-items: center;
      width: 100%;
      padding: 0;
  }

  ul.menu li {
      margin: 10px 0;
      width: 100%;
      text-align: center;
  }

  ul.menu li a {
      padding: 15px 0;
      font-size: 18px;
  }

  #menu-toggle:checked + label + ul.menu {
      display: flex;
  }

  .menu-icon {
      display: block;
      position: absolute;
      right: 20px;
      top: 20px;
  }


}

